# findSameFile

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  build.py  build.sh  cache_manager.py  config_manager.py  duplicate_finder.py  exceptions.py  export_manager.py  file_scanner.py  gui.py  logger.py  main.py  pyproject.toml  requirements.txt  similarity_detector.py  test_features.py  utils.py
.github/workflows/: build.yml
